
The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [5.0.0]
- Add common huckle logging output per configuration
- Add output to stderr rather than stdout for expected HCLI spec received RFC9457 problem detail
- Add better sys exit failure code if stderr receives data
- Update documentation to reflect changes
- Update to latest version of certifi (2024.8.30)

## [4.3.0]
- Add Basic HTTP Authentication credentials support (hcli config and credentials file)
- Add HCLI Core API Key (HCOAK) Bearer Authentication credentials (hcli config and credentials file)
- Add profile support for Basic HTTP Authentication credentials (one unique username/password per section/profile name)
- Add profile support for HCOAK Bearer Authentication credentials (one unique keyid/apikey per section/profile name)
- Update huckle help file to roff format best practice
- Update HCLI navigation error message

## [4.2.1]
- Update missing proper pyproject package configuration to dismiss build warnings
- Update universal dist flag since Python 2.7 is not supported
- Update to gunicorn 23.0.0 in circleci tests

## [4.2.0]
- Remove python 3.7 support.

## [4.1.1]
- Update README with future support for HTTP API Problem Details per spec to help with STDERR [RFC9457].

## [4.1.0]
- Update to move location of cached man pages to avoid permission issues when multiple users on the same computer try to use help.

## [4.0.1]
- Update to to use read_file instead of readfp which is now deprecated in python 3.12

## [4.0.0]
- Update to beta and full data packaging in pyproject.toml

## [3.5.2]
- Update to reintroduce version and dependencies so they are available to huckle

## [3.5.1]
- Update to pyproject.toml in prepration for pip deprecation of setup.py

## [3.5.0]
- Support str and bytes on stdin (convert to io.BytesIO)